# zeta

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
llm/: README.md  __init__.py  api.py
ollama/: README.md  api.py
passwords/: Modelfile  README.md  __init__.py  categorize_passwords.py  models.py
